tests/ui/suggestions/suggest-ret-on-async-w-late.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-ret-on-async-w-late.rs:10:5
   |
LL |     true
   |     ^^^^ expected `()`, found `bool`
   |
help: try adding a return type
   |
LL | async fn ice(_: &i32) -> bool {
   |                       +++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
